@@ -29,23 +29,16 @@ package org.wandora.application.tools.extractors.list;
 import org.wandora.application.tools.browserextractors.*;
 import org.wandora.utils.IObox;
 import org.wandora.application.tools.extractors.*;
-import org.wandora.application.tools.*;
 import org.wandora.application.gui.*;
 import org.wandora.topicmap.*;
 import org.wandora.application.*;
-import org.wandora.*;
-import org.wandora.utils.*;
-
 
 import java.util.*;
-import java.text.*;
-import java.lang.*;
 import java.io.*;
 import java.net.*;
 
 import javax.swing.*;
 import javax.swing.text.html.*;
-import javax.swing.text.html.parser.*;
 import javax.swing.text.*;
 import org.w3c.tidy.*;
 
@@ -77,7 +70,10 @@ import org.w3c.tidy.*;
  */
 public class InstanceListExtractor extends AbstractExtractor implements WandoraTool, BrowserPluginExtractor {
 
-    private URL basePath = null;
+
+	private static final long serialVersionUID = 1L;
+	
+	private URL basePath = null;
     private static int listCounter = 0;
     
     
@@ -209,7 +205,10 @@ public class InstanceListExtractor extends AbstractExtractor implements WandoraT
     
 
     private static class HTMLParse extends HTMLEditorKit {
-        /**
+
+		private static final long serialVersionUID = 1L;
+
+		/**
         * Call to obtain a HTMLEditorKit.Parser object.
         * @return A new HTMLEditorKit.Parser object.
         */
@@ -247,8 +246,8 @@ public class InstanceListExtractor extends AbstractExtractor implements WandoraT
         private Topic parentTopic;
         private String listId;
 
-        private Stack stateStack;
-        private Stack parentTopics;
+        private Stack<Integer> stateStack;
+        private Stack<Topic> parentTopics;
         
         private Topic listRoot = null;
         
@@ -263,8 +262,8 @@ public class InstanceListExtractor extends AbstractExtractor implements WandoraT
             currentTopicName = null;
             currentTopicUrl = null;
                       
-            stateStack = new Stack();
-            parentTopics = new Stack();
+            stateStack = new Stack<>();
+            parentTopics = new Stack<>();
             
             parentTopic = null;
             currentTopic = null;
@@ -303,7 +302,7 @@ public class InstanceListExtractor extends AbstractExtractor implements WandoraT
                     }
                 }
                 catch(Exception e) {}
-                stateStack.push(new Integer(state));
+                stateStack.push(Integer.valueOf(state));
                 state = STATE_UL;
             }
             else if(t == HTML.Tag.OL) {
@@ -321,7 +320,7 @@ public class InstanceListExtractor extends AbstractExtractor implements WandoraT
                     }
                 }
                 catch(Exception e) {}
-                stateStack.push(new Integer(state));
+                stateStack.push(Integer.valueOf(state));
                 state = STATE_OL;
             }
             else if(t == HTML.Tag.LI) {
@@ -329,7 +328,7 @@ public class InstanceListExtractor extends AbstractExtractor implements WandoraT
                     parentTopic = createListTopic();
                 }
                 currentTopicUrl = null;
-                stateStack.push(new Integer(state));
+                stateStack.push(Integer.valueOf(state));
                 state = STATE_LI;
             }
             else if(t == HTML.Tag.A) {
