@@ -31,16 +31,13 @@ import org.wandora.utils.IObox;
 import java.net.*;
 import java.io.*;
 import java.util.*;
-import java.text.*;
 import org.xml.sax.*;
 import org.w3c.tidy.*;
 import javax.swing.*;
 
 import org.wandora.topicmap.*;
 import org.wandora.application.*;
-import org.wandora.application.contexts.*;
 import org.wandora.application.tools.extractors.*;
-import org.wandora.utils.*;
 import org.wandora.application.gui.*;
 
 /**
@@ -49,7 +46,11 @@ import org.wandora.application.gui.*;
  */
 public class HCalendarExtractor extends AbstractExtractor implements WandoraTool {
     
-    /** Creates a new instance of AdrExtractor */
+
+	private static final long serialVersionUID = 1L;
+	
+	
+	/** Creates a new instance of AdrExtractor */
     public HCalendarExtractor() {
     }
 
@@ -216,7 +217,7 @@ public class HCalendarExtractor extends AbstractExtractor implements WandoraTool
         
         private Association association;
 
-        private Stack stateStack;
+        private Stack<Integer> stateStack;
         
 
         // -------------------------------------------------------------------------
@@ -240,7 +241,7 @@ public class HCalendarExtractor extends AbstractExtractor implements WandoraTool
             longitude = null;
             
             association = null;
-            stateStack = new Stack();
+            stateStack = new Stack<>();
         }
 
 
@@ -254,7 +255,7 @@ public class HCalendarExtractor extends AbstractExtractor implements WandoraTool
         }
 
         public void startElement(String uri, String localName, String qName, Attributes atts) throws SAXException {
-            stateStack.push(new Integer(state));
+            stateStack.push(Integer.valueOf(state));
             String clas = atts.getValue("class");
             
             if(parent.forceStop()){
@@ -405,13 +406,13 @@ public class HCalendarExtractor extends AbstractExtractor implements WandoraTool
         public void endElement(String uri, String localName, String qName) throws SAXException {
             switch(state) {
                 case STATE_VCALENDAR: {
-                    if(!stateStack.contains(new Integer(STATE_VCALENDAR))) {
+                    if(!stateStack.contains(Integer.valueOf(STATE_VCALENDAR))) {
                         processEvent();
                     }
                     break;
                 }
                 case STATE_VEVENT: {
-                    if(!stateStack.contains(new Integer(STATE_VEVENT))) {
+                    if(!stateStack.contains(Integer.valueOf(STATE_VEVENT))) {
                         processEvent();
                     }
                     break;
